--- a/public/index.html
+++ b/public/index.html
@@ -18,9 +18,17 @@
     </div>
   </div>
   <div id="app" class="content">
+	  <section class="image-gallery">
+		        <div class="image" v-for="item in items">
+				        <h2>{{item.title}}</h2>
+					        <img :src="item.path" />
+						      </div>
   </div>
   <div class="footer">
     <a href="/admin.html">Admin</a>
+  </div>
+  <div class="ghfooter">
+	  <a href="https://github.com/BYU-CS-260-Winter-2019/lab-4-coutnib">GitHub</a>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js" integrity="sha256-mpnrJ5DpEZZkwkE1ZgkEQQJW/46CSEh/STrZKOB/qoM=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.7/vue.js" integrity="sha256-g+Q8DFAmG5+eyRPSydX0LY4TfjsL11XSDrIGerbbEdA=" crossorigin="anonymous"></script>
