--- a/public/index.html
+++ b/public/index.html
@@ -3,32 +3,44 @@
 
 <head>
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="/styles.css" />
-  <title>Museum of Ordinary Objects</title>
+  <title>Granny Writers</title>
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+	  <img class="logoimg" src="/images/delight.png">
+		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+		  <span class="navbar-toggler-icon"></span>
+		  </button>
+		  <div class="collapse navbar-collapse" id="navbarNav">
+		  <ul class="navbar-nav">
+			<li class="nav-item active">
+				<a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="admin.html">Add Stories</a>
+			</li>
+		</ul>
+		</div>
+  </nav>
 </head>
 
 <body>
   <div class="header">
-    <div class="logo">
-      <img src="/images/ordinary.png">
-    </div>
     <div class="title">
-      <h2>CS 260</h2>
-      <h1>Museum of Ordinary Objects</h1>
+      <h1>Granny Writers</h1>
     </div>
   </div>
   <div id="app" class="content">
 	  <section class="image-gallery">
-		        <div class="image" v-for="item in items">
-				        <h2>{{item.title}}</h2>
-					        <img :src="item.path" />
-						      </div>
-  </div>
-  <div class="footer">
-    <a href="/admin.html">Admin</a>
+		<div class="image" v-for="item in items">
+			<h2>{{item.title}}</h2>
+			<img class="illustration" :src="item.path" />
+			<p>{{item.story}}</p>
+		</div>
   </div>
   <div class="ghfooter">
-	  <a href="https://github.com/BYU-CS-260-Winter-2019/lab-4-coutnib">GitHub</a>
+	  <a href="https://github.com/coutnib/cp4.git">GitHub</a>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js" integrity="sha256-mpnrJ5DpEZZkwkE1ZgkEQQJW/46CSEh/STrZKOB/qoM=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.7/vue.js" integrity="sha256-g+Q8DFAmG5+eyRPSydX0LY4TfjsL11XSDrIGerbbEdA=" crossorigin="anonymous"></script>
